syntax = "proto3";

package proto;
option go_package = "./;proto";

import "google/protobuf/timestamp.proto";
message Advert {
  // @inject_tag: json:"id"
  int64 ID   = 1;
  // @inject_tag: json:"title"
  string Title = 2;
  // @inject_tag: json:"href"
  string Href = 3;
  // @inject_tag: json:"image"
  string Image  = 4;
  // @inject_tag: json:"isShow"
  bool IsShow  = 5;
  // @inject_tag: json:"createdAt"
  google.protobuf.Timestamp CreatedAt = 6;
  // @inject_tag: json:"updatedAt"
  google.protobuf.Timestamp UpdatedAt = 7;
}

message AdvertListRequest {
  string Title = 1;
  int64 Page = 2;
  int64 PageSize = 3;
}

message AdvertListResponse {
  int64 Count = 1;
  repeated Advert Result = 2;
}
